--- a/css/main.css
+++ b/css/main.css
@@ -5,18 +5,33 @@ body {
 	color: #000;
 }
 
-h3, h4 {
-	margin-top: 40px;
-}
-
-h3:first-child {
-	margin-top: 20px; 
-}
-
 section {
 	padding-bottom: 20px;
 }
 
 section a {
 	font-weight: bold;
+}
+
+.side {
+	background: #fff;
+	border: 1px solid #ddd;
+	
+}
+
+h4 {
+	margin-top: 40px;
+	color: #337ab7;
+	/*font-weight: bold;*/
+}
+
+h4:first-child, .description, .courses, .courses> li {
+	margin-top: 20px;
+}
+
+@media (min-width: 768px) {
+	.side {
+		border-radius: 0 0 20px 20px;
+		/*padding-bottom: 15px;*/
+	}
 }
