--- a/css/main.css
+++ b/css/main.css
@@ -35,5 +35,7 @@ h4:first-child, .description, .courses, .courses > li {
 	
 	.side {
 		border-radius: 0 0 20px 20px;
+		margin-top: -20px;
+		padding-top: 20px;
 	}
 }
