--- a/css/reader.css
+++ b/css/reader.css
@@ -1,6 +1,6 @@
 body {
   font-size: 14px;  
-  background: url("../images/reader.jpg") no-repeat center center fixed;
+  background: #eee url("../images/reader.jpg") no-repeat center center fixed;
   background-size: cover;
 }
 
