more html5 and css3 stuff!

--- a/css/main.css
+++ b/css/main.css
@@ -1,31 +1,54 @@
+
 body {
+	color: #000;
+	background: #f8f7f2;
 	font-size: 16px;
 	font-family: 'Roboto', sans-serif;
-	background: #f8f7f2;
-	color: #000;
 }
 
-section {
-	padding-bottom: 20px;
+.navbar {
+	box-shadow: 0 0 5px #888;
+}
+
+.navbar-brand:first-letter {
+	font-weight: bold;
+}
+
+.navbar-brand span {
+	color: #337ab7;
+	font-family: cursive;
+}
+
+#top-menu li a:hover {
+	color: #555;
+    background-color: #e7e7e7;
+}
+
+body > section {
+	margin-top: 70px;
 }
 
 section a {
 	font-weight: bold;
 }
 
-.side {
+aside {
 	background: #fff;
 	border: 1px solid #ddd;
 }
 
-h4 {
+h1 {
 	margin-top: 40px;
 	color: #337ab7;
-	/*font-size: 1.125 rem;*/
+	font-size: larger;
 }
 
-h4:first-child, .description, .courses, .courses > li {
+h1:first-child, .description, .courses, .courses > li {
 	margin-top: 20px;
+}
+
+.courses > li li {
+	margin-top: 10px;
 }
 
 @media (min-width: 768px) {
@@ -33,8 +56,9 @@ h4:first-child, .description, .courses, .courses > li {
 		font-size: 18px;
 	}
 	
-	.side {
+	aside {
 		border-radius: 0 0 20px 20px;
+		box-shadow: 0 0 10px #ccc;
 		margin-top: -20px;
 		padding-top: 20px;
 	}
