--- a/views/courses.html
+++ b/views/courses.html
@@ -1,6 +1,6 @@
 <h1 class="text-center">Completed online courses</h1>
 {% for provider in providers %}
-<h2 class="top-padding">{{ provider.name }}
+<h2 class="extra-padding">{{ provider.name }}
     {% if provider.profile %}
     <small><a href="{{ provider.profile }}">see profile</a></small>
     {% endif %}
