--- a/views/courses.html
+++ b/views/courses.html
@@ -1,27 +1,26 @@
 <h1 class="text-center">Completed online courses</h1>
+
 {% for provider in providers %}
-<div class="row extra-top-padding-60">
-    <h2 class="col-xs-12">
+    <h2 class="extra-top-padding-60">
         {{ provider.name }}
         {% if provider.profile %}
-        <small><a href="{{ provider.profile }}">see profile</a></small>
+            <small><a href="{{ provider.profile }}">see profile</a></small>
         {% endif %}
     </h2>
-    {% for course in provider.courses %}
-    <div class="col-sm-6 col-md-4">
-        <a href="{{ course.link }}" class="course_link">
-            {% if course.inprogress %}
-            <div class="card inprogress" title="Learning in progress...">
-            {% else %}
-            <div class="card">
-            {% endif %}
-                {{ course.name }}
-                {% if course.inprogress %}
-                <span >&nwnear;</span>
-                {% endif %}
+
+    <div class="row">
+        {% for course in provider.courses %}
+            <div class="col-sm-6 col-md-4">
+                <a href="{{ course.link }}" class="course_link">
+                    {% if course.inprogress %}
+                        <div class="card inprogress" title="Learning in progress...">
+                    {% else %}
+                        <div class="card">
+                    {% endif %}
+                            {{ course.name }}
+                        </div>
+                </a>
             </div>
-        </a>
+        {% endfor %}
     </div>
-    {% endfor %}
-</div>
 {% endfor %}
