--- a/css/main.css
+++ b/css/main.css
@@ -24,20 +24,25 @@ body {
 	background-color: #e7e7e7;
 }
 
-aside {
-	background: #fff;
-	border: 1px solid #ddd;
-}
-
 main {
 	padding-bottom: 60px;
 }
 
+section.col-sm-4 {
+	background: #fff;
+	border: 1px solid #ccc;
+}
+
+#posts {
+	position: relative;
+}
+
 @media (min-width: 768px) {
-	aside {
+	section.col-sm-4 {
 		border-radius: 0 0 20px 20px;
 		box-shadow: 0 0 5px #ccc;
 		margin-top: -20px;
 		padding-top: 20px;
+		padding-bottom: 20px;
 	}
 }
