--- a/css/main.css
+++ b/css/main.css
@@ -1,41 +1,49 @@
+html {
+  position: relative;
+  min-height: 100%;
+}
 body {
 	color: #000;
 	background: #f8f7f2;
 	font-size: 16px;
 	font-family: 'Roboto', sans-serif;
 	padding-top: 70px;
+	margin-bottom: 80px;
 }
-
 .navbar {
 	box-shadow: 0 0 5px #888;
 }
-
-.navbar-brand:first-letter {
-	font-weight: bold;
-}
-
 .navbar span {
 	color: #337ab7;
 	font-family: cursive;
 }
-
 #top-menu a:hover {
 	color: #555;
 	background-color: #e7e7e7;
 }
-
-main {
-	padding-bottom: 60px;
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  /* Set the fixed height of the footer here */
+  height: 80px;
+  background-color: #f5f5f5;
+  border-top: 1px solid #ccc;
+}
+.footer > .container {
+  padding-right: 15px;
+  padding-left: 15px;
+}
+.container .text-muted {
+  margin: 30px 0;
 }
 
+main {padding-bottom: 40px;}
 section.col-sm-4 {
 	background: #fff;
 	border: 1px solid #ccc;
 }
-
-#posts {
-	position: relative;
-}
+#posts {position: relative;}
 
 @media (min-width: 768px) {
 	section.col-sm-4 {
