--- a/views/posts.html
+++ b/views/posts.html
@@ -3,7 +3,7 @@
         <ul class="list-unstyled">
     {% endif %}
     <li><a href="{{ post.url }}">{{ post.subject }}</a>, 
-        <em>{{ post.created }}</em></li>
+        <em title="{{ post.created | friendly_date }}">{{ post.created | pretty_date }}</em></li>
     {% if loop.last %}
         </ul>
     {% endif %}
