--- a/views/footer_text.html
+++ b/views/footer_text.html
@@ -1,3 +1,3 @@
 BaderSur &copy; {{ data.created_at | year }} - {{ data.pushed_at | year }}.
 Last modified: <a href="https://api.github.com/repos/badersur/badersur.github.io" 
-title="{{ data.pushed_at | friendly_date }}">{{ data.pushed_at | pretty_date }}</a>.
+title="{{ data.pushed_at | friendly_time }}">{{ data.pushed_at | relative_time }}</a>.
