--- a/app/partials/footer.html
+++ b/app/partials/footer.html
@@ -5,7 +5,7 @@
     </div>
 
     <ul class="mdl-mini-footer__link-list">
-      <li><a href="https://github.com/badersur/web-starter-kit#features">The site works offline ;)</a></li>
+      <li><a href="https://github.com/badersur/badersur.github.io">The site works offline ;)</a></li>
     </ul>
   </div>
 </footer>
