--- a/app/partials/project.html
+++ b/app/partials/project.html
@@ -20,7 +20,7 @@
 
 @@if (source) {
   <div class="mdl-card__actions">
-    <a class="android-link mdl-button mdl-js-button mdl-typography--text-uppercase" href="@@source">See source code<i class="material-icons">chevron_right</i></a>
+    <a class="android-link mdl-button mdl-js-button mdl-typography--text-uppercase" href="@@source">View source<i class="material-icons">chevron_right</i></a>
   </div>
 }
 
