--- a/app/partials/scripts.html
+++ b/app/partials/scripts.html
@@ -4,14 +4,14 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script src="https://mozilla.github.io/nunjucks/files/nunjucks.min.js"></script>
 
-  <!-- build:js scripts/main.min.js -->
-  <script src="scripts/main.js"></script>
+  <!-- build:js /scripts/main.min.js -->
+  <script src="/scripts/main.js"></script>
   <!-- endbuild -->
 }
 
 @@if (!mainScripts) {
-  <!-- build:js scripts/shared.min.js -->
-  <script src="scripts/shared.js"></script>
+  <!-- build:js /scripts/shared.min.js -->
+  <script src="/scripts/shared.js"></script>
   <!-- endbuild -->
 }
 
