Use mdl-sass, bundle JS and tweaks!

--- a/app/partials/footer.html
+++ b/app/partials/footer.html
@@ -2,10 +2,7 @@
   <div class="mdl-mini-footer__left-section">
     <div class="mdl-logo">
       BaderSur &copy; 2015 - @@currentYear
+      <a href="https://github.com/badersur/badersur.github.io" role="button" title="GitHub repo." class="repo-button"><img src="/images/github-mark.png"></a>
     </div>
-
-    <ul class="mdl-mini-footer__link-list">
-      <li><a href="https://github.com/badersur/badersur.github.io">The site works offline ;)</a></li>
-    </ul>
   </div>
 </footer>
