--- a/app/partials/main.html
+++ b/app/partials/main.html
@@ -47,8 +47,8 @@
       </div>
       <div class="section__text mdl-cell mdl-cell--10-col-desktop mdl-cell--6-col-tablet mdl-cell--3-col-phone">
         <h5>Building responsive websites</h5>
-        using HTML5, CSS3 (Bootstrap), JavaScript (Angular 1, jQuery, Moment), TypeScript (Angular 2), Node.js (Express), Python
-        (Django, webapp2, Beautiful Soup), C# 6 (ASP.NET Core MVC, EF) and PHP 7 (Laravel, Restler)
+        using HTML5, CSS3 (Bootstrap, MDL), JavaScript / ES6 (Angular 1, jQuery, Moment), TypeScript (Angular 2), Node.js (Express), Python
+        (Django, webapp2, Beautiful Soup), C# 6 (ASP.NET Core MVC, EF), PHP 7 (Laravel, Restler), yarn / npm, gulp, Babel and webpack 2
       </div>
 
     </div>
@@ -64,8 +64,4 @@
       (<a href="https://twitter.com/BaderSur">@BaderSur</a>) and Telegram (<a href="https://telegram.me/BaderSur">@BaderSur</a>).
     </div>
   </div>
-</section>
-
-
-<section class="section--footer mdl-color--white mdl-grid">
 </section>
