--- a/app/partials/scripts.html
+++ b/app/partials/scripts.html
@@ -1,17 +1,19 @@
-<script src="https://code.getmdl.io/1.3.0/material.min.js"></script>
-
 @@if (mainScripts) {
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://mozilla.github.io/nunjucks/files/nunjucks.min.js"></script>
 
   <!-- build:js /scripts/main.min.js -->
-  <script src="/scripts/main.js"></script>
+  <script src="../../node_modules/material-design-lite/src/mdlComponentHandler.js"></script>
+  <script src="../../node_modules/material-design-lite/src/layout/layout.js"></script>
+  <script src="../scripts/main.js"></script>
   <!-- endbuild -->
 }
 
 @@if (!mainScripts) {
   <!-- build:js /scripts/shared.min.js -->
-  <script src="/scripts/shared.js"></script>
+  <script src="../../node_modules/material-design-lite/src/mdlComponentHandler.js"></script>
+  <script src="../../node_modules/material-design-lite/src/layout/layout.js"></script>
+  <script src="../scripts/shared.js"></script>
   <!-- endbuild -->
 }
 
