--- a/app/templates/posts.html
+++ b/app/templates/posts.html
@@ -1,21 +1,25 @@
-{% for post in posts %}
+<section class="section--footer mdl-color--white mdl-grid">
 
-<div class="section__circle-container mdl-cell mdl-cell--2-col mdl-cell--1-col-phone">
-  <div class="section__circle-container__circle mdl-color--accent section__circle--big"></div>
-</div>
-<div class="section__text mdl-cell mdl-cell--4-col-desktop mdl-cell--6-col-tablet mdl-cell--3-col-phone">
-  <h5><a href="{{ post.url }}?gh">{{ post.subject }}</a></h5>
-  Published on {{ post.created | localeDate }}
-</div>
+  {% for post in posts %}
 
-{% else %}
+  <div class="section__circle-container mdl-cell mdl-cell--2-col mdl-cell--1-col-phone">
+    <div class="section__circle-container__circle mdl-color--accent section__circle--big"></div>
+  </div>
+  <div class="section__text mdl-cell mdl-cell--4-col-desktop mdl-cell--6-col-tablet mdl-cell--3-col-phone">
+    <h5><a href="{{ post.url }}?gh">{{ post.subject }}</a></h5>
+    Published on {{ post.created | localeDate }}
+  </div>
 
-<div class="section__circle-container mdl-cell mdl-cell--2-col mdl-cell--1-col-phone">
-  <div class="section__circle-container__circle mdl-color--accent section__circle--big"></div>
-</div>
-<div class="section__text mdl-cell mdl-cell--4-col-desktop mdl-cell--6-col-tablet mdl-cell--3-col-phone">
-  <h5>No posts yet!</h5>
-  Sorry!
-</div>
+  {% else %}
 
-{% endfor %}
+  <div class="section__circle-container mdl-cell mdl-cell--2-col mdl-cell--1-col-phone">
+    <div class="section__circle-container__circle mdl-color--accent section__circle--big"></div>
+  </div>
+  <div class="section__text mdl-cell mdl-cell--4-col-desktop mdl-cell--6-col-tablet mdl-cell--3-col-phone">
+    <h5>No posts yet!</h5>
+    Sorry!
+  </div>
+
+  {% endfor %}
+
+</section>
