--- a/app/partials/footer.html
+++ b/app/partials/footer.html
@@ -2,7 +2,7 @@
   <div class="mdl-mini-footer__left-section">
     <div class="mdl-logo">
       BaderSur &copy; 2015 - @@currentYear
-      <a href="https://github.com/badersur/badersur.github.io" role="button" title="GitHub repo." class="repo-button"><img src="/images/github-mark.png"></a>
+      <a href="https://github.com/badersur/badersur.github.io" role="button" title="GitHub repo." class="repo-button"><img src="/images/github-mark.png" alt="GitHub Mark"></a>
     </div>
   </div>
 </footer>
