--- a/app/partials/main.html
+++ b/app/partials/main.html
@@ -60,7 +60,7 @@
   <div class="mdl-card mdl-cell mdl-cell--12-col">
     <div class="mdl-card__supporting-text">
       <h4>Contact</h4>
-      Feel free to contact me at anytime at <a href="mailto:BaderSur@gmail.com">BaderSur@gmail.com</a> for job offers or any thing else. Also, you can reach me via Twitter
+      Feel free to contact me at anytime at <a href="mailto:BaderSur@gmail.com">BaderSur@gmail.com</a> for job offers or any thing else. You can also reach me via Twitter
       (<a href="https://twitter.com/BaderSur">@BaderSur</a>) and Telegram (<a href="https://telegram.me/BaderSur">@BaderSur</a>).
     </div>
   </div>
