--- a/app/partials/nav-links.html
+++ b/app/partials/nav-links.html
@@ -1,5 +1,5 @@
 <span class="mdl-layout-title"><a class="mdl-navigation__link" href="/">BaderSur</a></span>
 <nav class="mdl-navigation">
-  <a class="mdl-navigation__link" href="/projects.html">Projects</a>
-  <a class="mdl-navigation__link" href="/courses.html">Courses</a>
+  <a class="mdl-navigation__link" href="/projects@@if (!isGAE) {.html}">Projects</a>
+  <a class="mdl-navigation__link" href="/courses@@if (!isGAE) {.html}">Courses</a>
 </nav>
