--- a/app/partials/scripts.html
+++ b/app/partials/scripts.html
@@ -30,7 +30,7 @@
     a.src = g;
     m.parentNode.insertBefore(a, m)
   })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
-  ga('create', 'UA-93913692-1', 'auto');
+  ga('create', '@@trackingID', 'auto');
   ga('send', 'pageview');
 
 </script>
