--- a/app/partials/head.html
+++ b/app/partials/head.html
@@ -7,7 +7,7 @@
 
   <title>@@title - BaderSur</title>
   <meta name="google-site-verification" content="@@gVerification">
-  <meta name="msvalidate.01" content="B0834FBD732114AA49D57D6891C9C4DF" />
+  <meta name="msvalidate.01" content="B0834FBD732114AA49D57D6891C9C4DF">
 
   <!-- Disable tap highlight on IE -->
   <meta name="msapplication-tap-highlight" content="no">
