Utilize gulp-rev for static asset revisioning

--- a/app/partials/scripts.html
+++ b/app/partials/scripts.html
@@ -2,7 +2,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://mozilla.github.io/nunjucks/files/nunjucks.min.js"></script>
 
-  <!-- build:js /scripts/main.min.js -->
+  <!-- build:js /scripts/main.js -->
   <script src="../../node_modules/material-design-lite/src/mdlComponentHandler.js"></script>
   <script src="../../node_modules/material-design-lite/src/layout/layout.js"></script>
   <script src="../scripts/main.js"></script>
@@ -10,7 +10,7 @@
 }
 
 @@if (!mainScripts) {
-  <!-- build:js /scripts/shared.min.js -->
+  <!-- build:js /scripts/shared.js -->
   <script src="../../node_modules/material-design-lite/src/mdlComponentHandler.js"></script>
   <script src="../../node_modules/material-design-lite/src/layout/layout.js"></script>
   <script src="../scripts/shared.js"></script>
