Tweak scripts and gulp tasks

--- a/app/partials/nav-links.html
+++ b/app/partials/nav-links.html
@@ -1,5 +1,6 @@
-<span class="mdl-layout-title"><a class="mdl-navigation__link" href="/">BaderSur</a></span>
+<span class="mdl-layout-title"><a class="mdl-navigation__link" href="/">BS</a></span>
 <nav class="mdl-navigation">
   <a class="mdl-navigation__link" href="/projects@@if (!isGAE) {.html}">Projects</a>
   <a class="mdl-navigation__link" href="/courses@@if (!isGAE) {.html}">Courses</a>
+  <a class="mdl-navigation__link" href="https://bader-sur.appspot.com/blog">Blog</a>
 </nav>
