--- a/app/partials/head.html
+++ b/app/partials/head.html
@@ -20,20 +20,22 @@
 
   <!-- Add to homescreen for Safari on iOS -->
   <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-status-bar-style" content="black">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   <meta name="apple-mobile-web-app-title" content="BaderSur">
   <link rel="apple-touch-icon" href="/images/touch/apple-touch-icon.png">
 
   <!-- Tile icon for Win8 (144x144 + tile color) -->
-  <meta name="msapplication-TileImage" content="/images/touch/ms-touch-icon-144x144-precomposed.png">
+  <meta name="msapplication-TileImage"
+   content="/images/touch/ms-touch-icon-144x144-precomposed.png">
   <meta name="msapplication-TileColor" content="#2F3BA2">
 
   <!-- Color the status bar on mobile devices -->
   <meta name="theme-color" content="#2F3BA2">
 
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://badersur.github.io">
-  <meta property="og:image" content="https://badersur.github.io/images/touch/icon-128x128.png">
+  <meta property="og:url" content="/">
+  <meta property="og:image"
+   content="/images/touch/icon-128x128.png">
   <meta property="og:image:width" content="128">
   <meta property="og:image:height" content="128">
   <meta property="og:title" content="@@title">
@@ -43,7 +45,8 @@
   <meta name="twitter:site" content="@BaderSur">
   <meta name="twitter:title" content="@@title">
   <meta name="twitter:description" content="@@description">
-  <meta name="twitter:image" content="https://badersur.github.io/images/touch/icon-128x128.png">
+  <meta name="twitter:image"
+   content="/images/touch/icon-128x128.png">
 
   <!-- Material Design icons -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
