--- a/app/partials/head.html
+++ b/app/partials/head.html
@@ -1,11 +1,11 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="description" content="@@description">
+  <meta name="description" content="{{ description }}">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="author" content="@@author">
+  <meta name="author" content="{{ author }}">
 
-  <title>@@title - BaderSur</title>
+  <title>{{ title }} - BaderSur</title>
 
   <!-- Disable tap highlight on IE -->
   <meta name="msapplication-tap-highlight" content="no">
@@ -38,13 +38,13 @@
    content="/images/touch/icon-128x128.png">
   <meta property="og:image:width" content="128">
   <meta property="og:image:height" content="128">
-  <meta property="og:title" content="@@title">
-  <meta property="og:description" content="@@description">
+  <meta property="og:title" content="{{ title }}">
+  <meta property="og:description" content="{{ description }}">
 
   <meta name="twitter:card" content="summary">
   <meta name="twitter:site" content="@BaderSur">
-  <meta name="twitter:title" content="@@title">
-  <meta name="twitter:description" content="@@description">
+  <meta name="twitter:title" content="{{ title }}">
+  <meta name="twitter:description" content="{{ description }}">
   <meta name="twitter:image"
    content="/images/touch/icon-128x128.png">
 
