--- a/app/partials/scripts.html
+++ b/app/partials/scripts.html
@@ -1,7 +1,7 @@
-@@if (mainScripts) {
+{% if mainScripts %}
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://mozilla.github.io/nunjucks/files/nunjucks.min.js"></script>
-}
+{% endif %}
 
   <!-- build:js /scripts/main.js -->
   <script src="../../node_modules/material-design-lite/src/mdlComponentHandler.js"></script>
@@ -22,6 +22,6 @@
     a.src = g;
     m.parentNode.insertBefore(a, m)
   })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
-  ga('create', '@@trackingID', 'auto');
+  ga('create', '{{ trackingID }}', 'auto');
   ga('send', 'pageview');
 </script>
