add a filter to render markdown

--- a/app/partials/project.html
+++ b/app/partials/project.html
@@ -8,7 +8,7 @@
 
   <div class="mdl-card__supporting-text">
     <span class="mdl-typography--font-light mdl-typography--subhead">
-      {{ project.description }}
+      {{ project.description | markdown }}
     </span>
   </div>
 
