--- a/app/templates/header.html
+++ b/app/templates/header.html
@@ -1,9 +1,9 @@
 <header class="mdl-layout__header">
   <div class="mdl-layout__header-row">
-    {% include "./nav-links.html" %}
+    {% include "nav-links.html" %}
   </div>
 </header>
 
 <div class="mdl-layout__drawer mdl-layout--small-screen-only">
-  {% include "./nav-links.html" %}
+  {% include "nav-links.html" %}
 </div>
