--- a/app/templates/header.html
+++ b/app/templates/header.html
@@ -5,5 +5,6 @@
 </header>
 
 <div class="mdl-layout__drawer mdl-layout--small-screen-only">
+  {% set isDrawer = true %}
   {% include "nav-links.html" %}
 </div>
