Redirecting courses & projects

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -16,7 +16,7 @@
 {% set alternateLink = "/" + alternateLang + link %}
 
 {% set _title = "بدر الهاشمي" if lang == "ar" else "BaderSur" %}
-{% set fullTitle = title + " - " + _title %}
+{% set fullTitle = title + " | " + _title %}
 
 
 <!doctype html>
