--- a/app/templates/scripts.html
+++ b/app/templates/scripts.html
@@ -3,7 +3,7 @@
   <script src="/scripts/vendors/nunjucks.min.js" defer></script>
 {% endif %}
 
-  <!-- build:js /scripts/main.js defer async -->
+  <!-- build:js /scripts/main.js defer -->
   <script src="../../node_modules/material-design-lite/src/mdlComponentHandler.js"></script>
   <script src="../../node_modules/material-design-lite/src/layout/layout.js"></script>
   <script src="../scripts/main.js"></script>
