--- a/app/templates/footer.html
+++ b/app/templates/footer.html
@@ -5,10 +5,14 @@
 <footer class="mdl-mini-footer">
   <div class="mdl-mini-footer__left-section">
     <div class="mdl-logo">
-      {{ footerText }} &copy; 2015 - {{ currentYear }}<a
-       href="https://github.com/badersur/badersur.github.io"
-       role="button" title="{{ repoTitle }}" class="repo-button"><img
-       src="/images/github-mark.png" alt="{{ repoImageAlt }}"></a>
+      {{ footerText }} &copy; 2015 - {{ currentYear }}
+
+      <a href="https://github.com/badersur/badersur.github.io"
+       role="button" title="{{ repoTitle }}" class="repo-button">
+
+       <img src="/images/github-mark.png" alt="{{ repoImageAlt }}">
+
+      </a>
     </div>
   </div>
 </footer>
