use different GAE project IDs

--- a/app/templates/js-templates.html
+++ b/app/templates/js-templates.html
@@ -49,12 +49,12 @@
      {% if lang == "ar" %}
        عذرا
        <h5>هناك مشكلة تمنع من جلب
-         <a href="https://bader-sur.appspot.com/blog">التدوينات</a>
+         <a href="https://badersur-v2.appspot.com/blog">التدوينات</a>
        </h5>
      {% else %}
        Sorry!
        <h5>An error occured while fetching
-         <a href="https://bader-sur.appspot.com/blog">the posts</a> :(
+         <a href="https://badersur-v2.appspot.com/blog">the posts</a> :(
        </h5>
      {% endif %}
     </div>
