--- a/app/templates/nav-links.html
+++ b/app/templates/nav-links.html
@@ -9,7 +9,7 @@
 {% set mainNavLink = "/" +  lang + "/" %}
 {% set projectsNavLink = mainNavLink + "projects" + ("" if isGAE else ".html") %}
 {% set coursesNavLink = mainNavLink + "courses" + ("" if isGAE else ".html") %}
-{% set blogNavLink = "https://bader-sur.appspot.com/blog" %}
+{% set blogNavLink = "https://badersur-v2.appspot.com/blog" %}
 {% set alternateLangNavLink = alternateLink %}
 
 {% if not isDrawer %}
