Concat 3rd party scripts

--- a/app/templates/scripts.html
+++ b/app/templates/scripts.html
@@ -1,6 +1,7 @@
 {% if mainScripts %}
-  <script src="/scripts/vendors/jquery.min.js" defer></script>
-  <script src="/scripts/vendors/nunjucks.min.js" defer></script>
+  <!-- build:js /scripts/vendors.js defer -->
+  <script src="/scripts/jquery.min.js" defer></script>
+  <script src="/scripts/nunjucks.min.js" defer></script>
 {% endif %}
 
   <!-- build:js /scripts/main.js defer -->
