Remove X-UA-Compatible meta tag on GAE

--- a/app/templates/head.html
+++ b/app/templates/head.html
@@ -1,6 +1,10 @@
 <head prefix="og: http://ogp.me/ns#">
   <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
+  {% if not isGAE %}
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  {% endif %}
+
   <meta name="description" content="{{ description }}">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="author" content="{{ author }}">
