Add new logo & fix some issues with images

--- a/app/templates/footer.html
+++ b/app/templates/footer.html
@@ -10,7 +10,7 @@
       <a href="https://github.com/badersur/badersur.github.io"
        role="button" title="{{ repoTitle }}" class="repo-button">
 
-       <img src="/images/github-mark.png" alt="{{ repoImageAlt }}">
+       <img src="/images/github-mark-32x32.png" alt="{{ repoImageAlt }}">
 
       </a>
     </div>
