--- a/app/templates/head.html
+++ b/app/templates/head.html
@@ -35,20 +35,22 @@
   <!-- Web Application Manifest -->
   <link rel="manifest" href="/manifest.webmanifest">
 
+  <!-- favicon -->
+  <link rel="icon" sizes="32x32" href="/images/logo-32x32.png">
+
   <!-- Add to homescreen for Chrome on Android -->
   <meta name="mobile-web-app-capable" content="yes">
   <meta name="application-name" content="{{ appName }}">
-  <link rel="icon" sizes="192x192" href="/images/touch/chrome-touch-icon-192x192.png">
+  <link rel="icon" sizes="192x192" href="/images/logo-chrome-touch-192x192.png">
 
   <!-- Add to homescreen for Safari on iOS -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   <meta name="apple-mobile-web-app-title" content="{{ appName }}">
-  <link rel="apple-touch-icon" href="/images/touch/apple-touch-icon.png">
+  <link rel="apple-touch-icon" href="/images/logo-apple-touch-180x180.png">
 
   <!-- Tile icon for Win8 (144x144 + tile color) -->
-  <meta name="msapplication-TileImage"
-   content="/images/touch/ms-touch-icon-144x144-precomposed.png">
+  <meta name="msapplication-TileImage" content="/images/logo-ms-touch-144x144.png">
   <meta name="msapplication-TileColor" content="#2F3BA2">
 
   <!-- Color the status bar on mobile devices -->
@@ -57,7 +59,7 @@
   <meta property="og:type" content="website">
   <meta property="og:title" content="{{ title }}">
   <meta property="og:url" content="{{ fullUrl }}">
-  <meta property="og:image" content="{{ baseUrl + '/images/touch/icon-128x128.png' }}">
+  <meta property="og:image" content="{{ baseUrl + '/images/logo-128x128.png' }}">
 
   <meta property="og:image:width" content="128">
   <meta property="og:image:height" content="128">
@@ -68,7 +70,7 @@
   <meta name="twitter:creator" content="@BaderSur">
   <meta name="twitter:title" content="{{ title }}">
   <meta name="twitter:description" content="{{ description }}">
-  <meta name="twitter:image" content="{{ baseUrl + '/images/touch/icon-128x128.png' }}">
+  <meta name="twitter:image" content="{{ baseUrl + '/images/logo-128x128.png' }}">
   <meta name="twitter:url" content="{{ fullUrl }}">
 
   <!-- Material Design icons -->
