--- a/app/templates/head.html
+++ b/app/templates/head.html
@@ -3,6 +3,8 @@
 
   {% if not isGAE %}
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="X-Content-Type-Options" content="nosniff">
+    <meta http-equiv="Strict-Transport-Security" content="max-age=10886400">
   {% endif %}
 
   <meta name="description" content="{{ description }}">
@@ -17,7 +19,7 @@
 
   {% if redirectUrl %}
     <script>window.location.href = "{{ redirectUrl }}"</script>
-    <noscript><meta http-equiv="refresh" content="0; url={{ redirectUrl }}"></noscript>
+    <noscript><meta http-equiv="refresh" content="0;url={{ redirectUrl }}"></noscript>
   {% endif %}
 
   {% if not redirectUrl %}
