Link to my newest blog

--- a/app/templates/nav-links.html
+++ b/app/templates/nav-links.html
@@ -9,7 +9,7 @@
 {% set mainNavLink = "/" +  lang + "/" %}
 {% set projectsNavLink = mainNavLink + "projects" + extension %}
 {% set coursesNavLink = mainNavLink + "courses" + extension %}
-{% set blogNavLink = "https://badersur-v2.appspot.com/blog" %}
+{% set blogNavLink = "https://bader-nasser.appspot.com/" + lang + "/" %}
 {% set alternateLangNavLink = alternateLink %}
 
 {% if not isDrawer %}
