--- a/app/templates/js-templates.html
+++ b/app/templates/js-templates.html
@@ -1,7 +1,7 @@
 {% raw %}
 
 <script type="text/template" id="posts-template">
-  <section class="section--footer mdl-color--white mdl-grid" dir="auto">
+  <section class="section--footer mdl-color--white mdl-grid">
     {% for post in posts %}
       <div class="section__circle-container mdl-cell mdl-cell--2-col
       mdl-cell--1-col-phone">
@@ -9,14 +9,14 @@
         section__circle--big"></div>
       </div>
       <div class="section__text mdl-cell mdl-cell--4-col-desktop mdl-cell--6-col-tablet
-      mdl-cell--3-col-phone" dir="auto">
-        <h5><a href="{{ post.url }}?gh">{{ post.subject }}</a></h5>
+      mdl-cell--3-col-phone">
+        <h5><a href="{{ post.html_url }}">{{ post.title }}</a></h5>
         {% if lang == "ar" %}
           نُشرت في
         {% else %}
           Published on
         {% endif %}
-        {{ post.created | localeDate }}
+        {{ post.created_at | localeDate }}
       </div>
     {% else %}
       <div class="section__circle-container mdl-cell mdl-cell--2-col
@@ -38,7 +38,7 @@
 </script>
 
 <script type="text/template" id="error-template">
-  <section class="section--footer mdl-color--white mdl-grid" dir="auto">
+  <section class="section--footer mdl-color--white mdl-grid">
     <div class="section__circle-container mdl-cell mdl-cell--2-col
     mdl-cell--1-col-phone">
       <div class="section__circle-container__circle mdl-color--accent
@@ -49,12 +49,12 @@
      {% if lang == "ar" %}
        عذرا
        <h5>هناك مشكلة تمنع من جلب
-         <a href="https://badersur-v2.appspot.com/blog">التدوينات</a>
+         <a href="https://bader-nasser.appspot.com/">التدوينات</a>
        </h5>
      {% else %}
        Sorry!
        <h5>An error occured while fetching
-         <a href="https://badersur-v2.appspot.com/blog">the posts</a> :(
+         <a href="https://bader-nasser.appspot.com/">the posts</a> :(
        </h5>
      {% endif %}
     </div>
